src/objects/geopointe__GP_List__c.object
<CustomObject>
    <description>Working list for a user to keep track of records they want to visit.</description>
    <fields>
        <fullName>geopointe__GP_List_Tag__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Geopointe list tag that the list relates to.</description>
        <inlineHelpText>Geopointe list tag that the list relates to.</inlineHelpText>
        <label>Geopointe Tag</label>
        <referenceTo>geopointe__GP_Tag__c</referenceTo>
        <relationshipLabel>Geopointe List List Tag</relationshipLabel>
        <relationshipName>Geopointe_List_List_tag</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>geopointe__Is_Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Is_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Status of the list - completed or not completed.</description>
        <inlineHelpText>Status of the list - completed or not completed.</inlineHelpText>
        <label>Is Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Marker_Color__c</fullName>
        <defaultValue>&quot;FF0000&quot;</defaultValue>
        <inlineHelpText>The HEX color that the active List markers should be in</inlineHelpText>
        <label>Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Geopointe List (Deprecated)</label>
    <nameField>
        <label>Geopointe List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>